# MetaVisage

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_BUILD.md  RELEASE_NOTES.md  build-mingw.ps1  build-msvc.ps1  package-release.ps1
.claude/: settings.local.json
assets/shaders/: basic.frag  basic.vert  grid.vert  heatmap.frag  heatmap.vert  matcap.frag  matcap.vert  overlay.frag  point.frag  point.vert  textured.frag
docs/: KNOWN_ISSUES.md  PRD.md  SPRINT_PLAN.md
include/baking/: TextureBaker.h  TextureWriter.h
include/core/: Camera.h  Mesh.h  Project.h  TextureData.h  Transform.h  Types.h  UndoActions.h  UndoStack.h  UndoableAction.h
include/deformation/: MeshDeformer.h  NRICPDeformer.h  RBFInterpolator.h
include/io/: MeshExporter.h  ProjectSerializer.h
include/rendering/: MeshRenderer.h  PointRenderer.h  Renderer.h  ShaderManager.h
include/sculpting/: BrushStroke.h  GrabBrush.h  InflateBrush.h  MaskBrush.h  PushPullBrush.h  SculptBrush.h  SmoothBrush.h
include/ui/: ExportDialog.h  MainWindow.h  ShortcutsDialog.h  SidebarWidget.h  ViewportContainer.h  ViewportWidget.h  WelcomeDialog.h
include/utils/: BVH.h  ErrorHelper.h  Logger.h  RayCaster.h  SpatialHash.h
src/: main.cpp
src/baking/: TextureBaker.cpp  TextureWriter.cpp
src/core/: Camera.cpp  Mesh.cpp  Project.cpp  TextureData.cpp  Transform.cpp  UndoStack.cpp
src/deformation/: MeshDeformer.cpp  NRICPDeformer.cpp  RBFInterpolator.cpp
src/io/: MeshExporter.cpp  ProjectSerializer.cpp
src/rendering/: MeshRenderer.cpp  PointRenderer.cpp  Renderer.cpp  ShaderManager.cpp
src/sculpting/: GrabBrush.cpp  InflateBrush.cpp  MaskBrush.cpp  PushPullBrush.cpp  SculptBrush.cpp  SmoothBrush.cpp
src/ui/: ExportDialog.cpp  MainWindow.cpp  ShortcutsDialog.cpp  SidebarWidget.cpp  ViewportContainer.cpp  ViewportWidget.cpp  WelcomeDialog.cpp
src/utils/: BVH.cpp  ErrorHelper.cpp  Logger.cpp  RayCaster.cpp  SpatialHash.cpp
